# chat

./: .pylintrc  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: pylint.yml  pypi.yaml
chat/: __init__.py  __main__.py  constants.py  conversation.py
chat_cli/: __init__.py  __main__.py  constants.py  conversation.py
tests/: test_main.py
